--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                 9,999 likes
             </div>
             <div class="comments">
-                <span class="title">apple</span>
+                <span class="title">febry_anto</span>
                 "Color, shape, texture, negative space and a little bit of whimsy can be the basic of great
                 compoosision"
-                <span class="hashtag">#iPhone</span>
+                <span class="hashtag">#febry #cloneCodingInstagram</span>
             </div>
             <div class="count">
                 View all 169 comments
@@ -291,7 +291,7 @@
                         <img width="56px" src="image/icons/6.png">
                     </div>
                     <p class="flex-col">
-                        <span>Febry Anto</span>
+                        <span>Airel</span>
                         <span>sparta</span>
                     </p>
                     <a href="#">Follow</a>
