--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
                         <img width="56px" src="image/icons/6.png">
                     </div>
                     <p class="flex-col">
-                        <span>Airel</span>
-                        <span>sparta</span>
+                        <span>Febry Anto</span>
+                        <span>24peb_</span>
                     </p>
                     <a href="#">Follow</a>
                 </li>
